# ObjectInHand-Dataset

./: .gitignore  README.md  index.md
DataExtraction/src/data_extraction/: CMakeLists.txt  package.xml
DataExtraction/src/data_extraction/scripts/: extract_data.py
DataExtraction/src/data_extraction/scripts/files/: basefootprint_camera.yaml  tf_static.bag
DataExtraction/src/tams_biotac/: CMakeLists.txt  README.md  package.xml
DataExtraction/src/tams_biotac/include/tams_biotac/: contacts.h  filter.h  force.h  normalization.h  subtract_temperature.h  tactile_calibrated.h  visualize_electrodes.h
DataExtraction/src/tams_biotac/launch/: biotac.launch
DataExtraction/src/tams_biotac/msg/: Biotac.msg  BiotacAll.msg  Contact.msg  ContactArray.msg
DataExtraction/src/tams_biotac/src/: contacts.cpp  filter.cpp  force.cpp  normalization.cpp  subtract_temperature.cpp  tactile_calibrated.cpp  tams_biotac_calibrated_node.cpp  tams_biotac_node.cpp  temperature.cpp  visualize_electrodes.cpp
SelectLSTM/: dataset.py  model.py  pose_loss.py  test_network.py  train_network.py
SelectLSTM/shuffile_files/: cleanser.txt  cracker.txt  cup.txt  mustard.txt  pear.txt  spatula.txt  sugar.txt
SelectLSTM/ycb_models/cleanser/: transform_pose.npy
SelectLSTM/ycb_models/cracker/: temp.urdf  transform_pose.npy
SelectLSTM/ycb_models/cup/: transform_pose.npy
SelectLSTM/ycb_models/mustard/: model.urdf  transform_pose.npy
SelectLSTM/ycb_models/pear/: transform_pose.npy
SelectLSTM/ycb_models/spatula/: model.urdf  transform_pose.npy
SelectLSTM/ycb_models/sugar/: transform_pose.npy
